gitops/apps/pz-control/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pz-control
  namespace: project-zomboid
spec:
  type: ClusterIP
  selector:
    app: pz-control
  ports:
    - name: http
      port: 8080
      targetPort: 8080
