gitops/apps/pz-control/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pz-control-http
  namespace: project-zomboid
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
      sectionName: http
  hostnames:
    - pz.bealv.io
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pz-control
  namespace: project-zomboid
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - pz.bealv.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pz-control
          port: 8080
